4.0-beta5
 * Fix node unable to join when RF > N in multi-DC with added warning (CASSANDRA-16296)
 * Add an option to nodetool tablestats to check sstable location correctness (CASSANDRA-16344) 
 * Unable to ALTER KEYSPACE while decommissioned/assassinated nodes are in gossip (CASSANDRA-16422)
 * Metrics backward compatibility restored after CASSANDRA-15066 (CASSANDRA-16083)
 * Reduce new reserved keywords introduced since 3.0 (CASSANDRA-16439)
 * Improve system tables handling in case of disk failures (CASSANDRA-14793)
 * Add access and datacenters to unreserved keywords (CASSANDRA-16398)
 * Fix nodetool ring, status output when DNS resolution or port printing are in use (CASSANDRA-16283)
 * Upgrade Jacoco to 0.8.6 (for Java 11 support) (CASSANDRA-16365)
 * Move excessive repair debug loggings to trace level (CASSANDRA-16406)
 * Restore validation of each message's protocol version (CASSANDRA-16374)
 * Upgrade netty and chronicle-queue dependencies to get Auditing and native library loading working on arm64 architectures (CASSANDRA-16384,CASSANDRA-16392)
 * Release StreamingTombstoneHistogramBuilder spool when switching writers (CASSANDRA-14834)
 * Correct memtable on-heap size calculations to match actual use (CASSANDRA-16318)
 * Fix client notifications in CQL protocol v5 (CASSANDRA-16353)
 * Too defensive check when picking sstables for preview repair (CASSANDRA-16284)
 * Ensure pre-negotiation native protocol responses have correct stream id (CASSANDRA-16376)
 * Fix check for -Xlog in cassandra-env.sh (CASSANDRA-16279)
 * SSLFactory should initialize SSLContext before setting protocols (CASSANDRA-16362)
 * Restore sasi dependencies jflex, snowball-stemmer, and concurrent-trees, in the cassandra-all pom (CASSANDRA-16303)
 * Fix DecimalDeserializer#toString OOM (CASSANDRA-14925)
Merged from 3.11:
 * Fix digest computation for queries with fetched but non queried columns (CASSANDRA-15962)