@@ -161,11 +161,11 @@ public enum DataType
             case UDT:
                 UserType udt = (UserType)value;
                 CBUtil.writeAsciiString(udt.keyspace, cb);
-                CBUtil.writeAsciiString(UTF8Type.instance.compose(udt.name), cb);
+                CBUtil.writeString(UTF8Type.instance.compose(udt.name), cb);
                 cb.writeShort(udt.size());
                 for (int i = 0; i < udt.size(); i++)
                 {
-                    CBUtil.writeAsciiString(udt.fieldName(i).toString(), cb);
+                    CBUtil.writeString(udt.fieldName(i).toString(), cb);
                     codec.writeOne(DataType.fromType(udt.fieldType(i), version), cb, version);
                 }
                 break;
@@ -201,11 +201,11 @@ public enum DataType
                 UserType udt = (UserType)value;
                 int size = 0;
                 size += CBUtil.sizeOfAsciiString(udt.keyspace);
-                size += CBUtil.sizeOfAsciiString(UTF8Type.instance.compose(udt.name));
+                size += CBUtil.sizeOfString(UTF8Type.instance.compose(udt.name));
                 size += 2;
                 for (int i = 0; i < udt.size(); i++)
                 {
-                    size += CBUtil.sizeOfAsciiString(udt.fieldName(i).toString());
+                    size += CBUtil.sizeOfString(udt.fieldName(i).toString());
                     size += codec.oneSerializedSize(DataType.fromType(udt.fieldType(i), version), version);
                 }
                 return size;
